[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/music/common-fight.ogg" type="AudioStream" id=1]
[ext_resource path="res://assets/images/desert-backgorund.png" type="Texture" id=2]
[ext_resource path="res://assets/images/clouds.png" type="Texture" id=3]
[ext_resource path="res://scripts/Level.gd" type="Script" id=4]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -1, 0, 0, 0, 0, 122, -1 )
}

[node name="Level" type="Node2D" groups=["level"]]
script = ExtResource( 4 )
Enemy = ExtResource( 6 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 0, 272 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
texture = ExtResource( 2 )
centered = false

[node name="Cloud01" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Cloud01"]
motion_mirroring = Vector2( 0, 272 )

[node name="Sprite" type="Sprite" parent="Cloud01/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.313726 )
texture = ExtResource( 3 )
centered = false

[node name="Cloud02" type="ParallaxBackground" parent="."]
offset = Vector2( 0, 128 )
transform = Transform2D( 1, 0, 0, 1, 0, 128 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Cloud02"]
motion_mirroring = Vector2( 0, 272 )

[node name="Sprite" type="Sprite" parent="Cloud02/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.470588 )
texture = ExtResource( 3 )
centered = false

[node name="EnemiesTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="EnemiesPath" type="Path2D" parent="."]
position = Vector2( 10, -24 )
curve = SubResource( 1 )

[node name="EnemiesSpawn" type="PathFollow2D" parent="EnemiesPath"]
position = Vector2( 0, -1 )
rotation = 1.51968e-08

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 68, 233 )

[connection signal="timeout" from="EnemiesTimer" to="." method="_on_EnemiesTimer_timeout"]
